--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="content">
-			<p>I'm a programmer and Android App Developer from India, currently studying Computer Science at <a href="http://www.chitkara.edu.in" target="_blank">Chitkara University</a>, Punjab (2013-17 batch).<br />
+			<p>I'm a Fullstack Enthusiast.Angular JS, UI technologies, Spring & Hibernate. Cross platform mobile app development from India. Currently working in <a href="https://www.gslab.com/" target="_blank">GS Lab</a>, Pune.<br />
 			</p>
 		</div>
 
@@ -42,7 +42,7 @@
 
 	<div id="moreinfo">
 		<a href="#projects" class="scroll"><span class="fa fa-coffee"></span>&nbsp; View projects</a> <span class="pipeline">|</span> 
-		<a href="docs/ankit-keshari-resume.pdf" target="_blank"><span class="fa fa-file-pdf-o"></span>&nbsp; Check my resume</a> <span class="pipeline">|</span>
+		<a href="docs/Resume.pdf" target="_blank"><span class="fa fa-file-pdf-o"></span>&nbsp; Check my resume</a> <span class="pipeline">|</span>
 		<a href="mailto:ankitkeshari719@gmail.com" target="_blank"><span class="fa fa-envelope"></span>&nbsp; Get in touch</a>
 	</div>
 
