--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="content">
-			<p>I'm a Fullstack Enthusiast. Angular JS, UI technologies, Spring & Hibernate. Cross platform mobile app development from India. Currently working in <a href="https://www.gslab.com/" target="_blank">GS Lab</a>, Pune.<br />
+			<p>I'm a Fullstack Enthusiast. Angular JS, UI technologies, Spring & Hibernate. Cross platform mobile app developer from India. Currently working in <a href="https://www.gslab.com/" target="_blank">GS Lab</a>, Pune.<br />
 			</p>
 		</div>
 
