Added Project & Certificates

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
@@ -66,13 +69,18 @@
         <h1 class="mb-0">Ankit
           <span class="text-primary">Keshari</span>
         </h1>
-        <div class="subheading mb-5">H-19, Rajnarayan Nagar. Gangapur Varanasi· Uttar Pradesh, CO 221302 · (+91)
-          950-1671-533 ·
-          <a href="mailto:ankitkeshari719@gmail.com">ankitkeshari719@gmail.com</a>
+        <div class="subheading mb-5">H-19, Gangapur Varanasi· Uttar Pradesh, CO 221302· (+91)
+          950-1671-533·
+          <a href="mailto:ankitkeshari719@gmail.com"> ankitkeshari719@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level
-          overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall
-          value proposition.</p>
+        <p class="lead mb-5" style="text-align: justify;">I'm a web developer with over 2.5 years of experience in the
+          field. I work full time for a
+          software company called Great Software Laboratory. I've designed, developed and tested many projects. I write
+          clean,
+          responsive code and always hit my deadlines on time. I have experience with analytics, version control and
+          working in a team environment. I know a plethora of computer languages and will take the time to learn a new
+          language if needed. I'm confident, hard working and dependable. I will work around the clock until my clients
+          and/or employers are satisfied</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/ankit-keshari-a2937094?trk=hp-identity-name" target="_blank"><i
               class="fa fa-linkedin-square">
@@ -244,7 +252,80 @@
     </section>
 
     <hr class="m-0">
-
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+      <div class="w-100">
+        <h2 class="mb-5">Projects</h2>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3">M-Bill</div>
+            <p>mBill is an invoicing and inventory management app through which you could quickly generate an invoice
+              and maintain all business transaction. This website is the perfect POS solution.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Feb 2020 - Present</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3">Swiss Safe Collect</div>
+            <p>SwissSafeCollect offers services to collect, monitor and process toxic human urine, for the benefit of
+              doctors, patients & the health industry.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Oct 2019 - Feb 2020</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3">JCB Endurance Test</div>
+            <p>An application to monitor all the JCB machines working parameters and its
+              processes.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - Oct 2019</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3">Avaya Intelligent Workspace</div>
+            <p>An application involves the development of smart assistance using Avaya
+              platform and third-party services. This application provides many functionalities to users like
+              email, chat, audio and video call & call conferencing etc.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">March 2019 - June 2019</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3">Secure payment based Application</div>
+            <p>The application is in angular 5 using clients customized theme which has
+              dashboard to show different types of request in tabular format with Graphical representation
+              including Advance Filter, Sorting and Pagination.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2018 -March 2019</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3">In-house employee review system</div>
+            <p>This project helps to maintain the performance of an employee review. I was a
+              part of this project since the beginning and from scratch.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2017 - June 2018</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
@@ -265,30 +346,21 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            Udemy Angular Certified Developer</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            Udemy React Certified Developer</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            Udemy Bootstrap / Flex  Certified Developer</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            <!-- 1<sup>st</sup> -->
+            Pat on the Back for my good performance in Project</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            <!-- 1<sup>st</sup> -->
+            Part of Top 30 students in Collage UCA Batch </li>
         </ul>
       </div>
     </section>
