Worked on the updated data

--- a/index.html
+++ b/index.html
@@ -42,20 +42,22 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        </li>
+        
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
+        -->
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
+          <a class="nav-link js-scroll-trigger" href="#interests">Contact</a>
+        </li> 
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
@@ -64,23 +66,74 @@
   </nav>
 
   <div class="container-fluid p-0">
+    <!-- About Section -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Ankit
+        <h1 class="mb-0">I'm Ankit
           <span class="text-primary">Keshari</span>
         </h1>
-        <div class="subheading mb-5">H-19, Gangapur Varanasi· Uttar Pradesh, CO 221302· (+91)
-          950-1671-533·
-          <a href="mailto:ankitkeshari719@gmail.com"> ankitkeshari719@gmail.com</a>
+        <div class="subheading mb-5">
+          Passionate Software Developer
         </div>
-        <p class="lead mb-5" style="text-align: justify;">I'm a web developer with over 2.5 years of experience in the
-          field. I work full time for a
-          software company called Great Software Laboratory. I've designed, developed and tested many projects. I write
-          clean,
-          responsive code and always hit my deadlines on time. I have experience with analytics, version control and
-          working in a team environment. I know a plethora of computer languages and will take the time to learn a new
-          language if needed. I'm confident, hard working and dependable. I will work around the clock until my clients
-          and/or employers are satisfied</p>
+        <h2 class="mb-2">About</h2>
+        <!-- PROFESSIONAL SUMMARY< -->
+        <p class="lead mb-2" style="text-align: justify;">PROFESSIONAL SUMMARY</p>
+        <ul class="fa-ul mb-4">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            6+ years of professional experience in a corporate environment as a front-end developer
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Experience in developing interactive web applications using React, Redux, TypeScript, JavaScript, Node.js,
+            material-UI, HTML, and CSS.
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Experience developing responsive, cross-browser-compatible web applications.
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Providing highly effective code reviews and peer support.
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Sound knowledge of version control systems - GIT, GitLab.
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Worked extensively in the Agile Development Process with JIRA.
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Problem-solving with an ability to work independently or in a team environment.
+          </li>
+        </ul>
+        <!-- BASIC INFORMATION< -->
+        <p class="lead mb-2" style="text-align: justify;">BASIC INFORMATION</p>
+        <ul class="fa-ul mb-5">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            <b>Experience:</b> 6 Years
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            <b>Age:</b> 29 Years
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            <b>Email:</b> ankitkeshari719@gmail.com
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            <b>Language:</b> English, Hindi,
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            <b>City:</b> Pune, Maharashtra, India
+          </li>
+        </ul>
+        <!-- Social Icons -->
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/ankit-keshari-a2937094?trk=hp-identity-name" target="_blank"><i
               class="fa fa-linkedin-square">
@@ -92,70 +145,165 @@
           <a href="https://twitter.com/I_m_ankit_kesri" target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://www.facebook.com/ankitkeshari719" target="_blank">
-            <i class="fab fa-facebook-f"></i>
-          </a>
         </div>
       </div>
     </section>
-
+    <!-- Skills Section -->
     <hr class="m-0">
-
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+      <div class="w-100">
+        <h2 class="mb-5">Skills</h2>
+        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <i class="fab fa-html5"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-css3-alt"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-js-square"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-react"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-node-js"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-angular"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-npm"></i>
+          </li>
+        </ul>
+        <div class="subheading mb-3">Workflow</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Mobile-First, Responsive Design
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Cross Browser Testing &amp; Debugging
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Cross Functional Teams
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Agile Development &amp; Scrum
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Experience Section -->
+    <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
-
-        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
-          </div>
-        </div> -->
-
+        <h2 class="mb-5">PROFESSIONAL EXPERIENCE</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
+            <h3 class="mb-0">Lead Software Engineer</h3>
             <div class="subheading mb-3">Great Software Laboratory</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the
-              digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information
-              highway will close the loop on focusing solely on the bottom line.</p>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                <b>Technologies Worked: </b> React, TypeScript, JavaScript, Node.js, material-UI,
+                HTML5, and CSS.
+              </li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Creating self-contained, reusable modules, and components.
+              </li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Participating in strategy and brainstorming meetings.
+              </li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Peer code review and support.
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2017 - Present</span>
+            <span class="text-primary">March 2023 - Present</span>
           </div>
         </div>
-
-        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Senior Software Engineer</h3>
+            <div class="subheading mb-3">Great Software Laboratory</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                <b>Technologies Worked: </b> React, TypeScript, JavaScript, Node.js, material-UI,
+                HTML5, and CSS.
+              </li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Creating self-contained, reusable modules, and components.
+              </li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Participating in strategy and brainstorming meetings.
+              </li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Peer code review and support.
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">March 2021 - March 2023</span>
           </div>
-        </div> -->
-
-        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">Great Software Laboratory</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                <b>Technologies Worked: </b> Angular, TypeScript, JavaScript, material-UI,
+                HTML5, and CSS.
+              </li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Building web applications components using Angular.
+              </li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Participating in strategy and brainstorming meetings.
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">March 2017 - March 2021</span>
           </div>
-        </div> -->
+        </div>
       </div>
-
     </section>
-
+    <!-- Interests Section-->
     <hr class="m-0">
-
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+      <div class="w-100">
+        <h2 class="mb-5">Contact</h2>
+        <ul class="fa-ul mb-5">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            <b>Email:</b> ankitkeshari719@gmail.com
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            <b>City:</b> Pune, Maharashtra, India
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Education Section -->
+    <!-- <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
@@ -185,73 +333,9 @@
         </div>
 
       </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
-      <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <!-- <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li> -->
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
-      </div>
-    </section>
-
-    <hr class="m-0">
+    </section> -->
+    <!-- Projects Section-->
+    <!-- <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
@@ -324,47 +408,34 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
+    
+    <!-- IAwards Section-->
     <hr class="m-0">
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier
-          and novice ice climber. During the warmer months here in Pune, I enjoy mountain biking, free climbing, and
-          kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows,
-          I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements
-          in the front-end web development world.</p>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Udemy Angular Certified Developer</li>
+            Udemy Angular Certified Developer
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Udemy React Certified Developer</li>
+            Udemy React Certified Developer
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Udemy Bootstrap / Flex  Certified Developer</li>
+            Udemy Bootstrap / Flex Certified Developer
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <!-- 1<sup>st</sup> -->
-            Pat on the Back for my good performance in Project</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            <!-- 1<sup>st</sup> -->
-            Part of Top 30 students in Collage UCA Batch </li>
+            Pat on the Back for my good performance in Project
+          </li>
         </ul>
       </div>
     </section>
-
   </div>
 
   <!-- Bootstrap core JavaScript -->
